--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -8,6 +8,7 @@
   grid-template-rows: 8rem 1fr 5rem;
   height: 100%;
   padding-top: 0.5rem;
+  color: #415161;
 }
 
 /* header */
@@ -21,7 +22,20 @@
   font-weight: bold;
   text-decoration: none;
 }
-
+.inputApp {
+  width: 500px !important;
+}
+.botonApp {
+  border-radius: 10px;
+}
+.boton {
+  padding-left: 1rem !important;
+}
+.formApp {
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+}
 .header {
   grid-area: header;
 
@@ -35,7 +49,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 
 .header-links a {
-  color: black;
+  color: #415161;
   text-decoration: none;
   padding: 1rem;
   font-size: 1rem;
@@ -51,6 +65,7 @@
 
 a {
   text-decoration: none;
+  color: #415161;
 }
 a:hover {
   color: #ff8000;
@@ -71,6 +86,7 @@ a:hover {
   background-color: white;
   margin: 0;
   margin-top: 0.4rem;
+  color: #415161;
 }
 .dropdown:hover .dropdown-content {
   display: block;
@@ -89,10 +105,12 @@ a:hover {
   padding-left: 18rem;
   padding-right: 18rem;
   padding-bottom: 0rem;
+  color: #415161;
 }
 
 .datosFooter {
   font-size: 0.7rem;
+  color: #415161;
 }
 
 .logos {
@@ -102,4 +120,5 @@ a:hover {
   display: flex;
   align-items: center;
   padding: 0rem;
+  color: #415161;
 }
