--- a/frontend/src/component/Login/login.css
+++ b/frontend/src/component/Login/login.css
@@ -5,12 +5,14 @@ body {
 }
 .subTitle {
   padding-top: 0.5rem;
-  font-size: 0.7rem;
+  font-size: 0.9rem;
   color: #415161;
+
+  font-family: "Roboto", sans-serif !important;
 }
 .campos {
   padding: 1.5rem !important;
-  font-size: 1rem !important;
+  font-size: 1.2rem !important;
   display: flex;
   align-items: center;
   color: #415161;
@@ -24,6 +26,7 @@ body {
 .largoInput {
   width: 200px !important;
   height: 40px !important;
+  font-size: 1.5rem !important;
 }
 .spanError {
   font-size: 0.6rem;
@@ -37,14 +40,16 @@ body {
 }
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 .title {
-  font-size: 1.5rem;
+  font-size: 3rem !important;
   color: #415161;
+  font-family: "Roboto", sans-serif;
 }
 .form {
   display: flex;
   text-align: center;
   justify-content: center;
   padding: 4rem;
+  font-size: 1.5rem !important;
   font-family: "Roboto", sans-serif;
 }
 
@@ -59,7 +64,7 @@ span {
 
 .preguntas {
   padding: 1rem;
-  font-size: 0.7rem;
+  font-size: 0.9rem !important;
   color: #415161;
 }
 .preguntas a {
