--- a/frontend/src/component/Register/register.css
+++ b/frontend/src/component/Register/register.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 .title {
-  font-size: 1.3rem;
+  font-size: 3rem !important;
   color: #415161;
 }
 .form {
